# nchain

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml
assets/: nchain-config.ini  nchain.service
docs/: memo.md  memo.txt
src/: main.rs  monitor.rs  settings.rs
